--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing RV</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <button onclick="toggleMode()">Cambiar tema</button>
+    <header>
+        <div class="logo-container">
+            <img src="../img/logos/raices-viajeras-logo0.webp" alt="RV Logo">
+            <h1>RAÍCES VIAJERAS</h1>
+        </div>
+        <a onclick="cambiaModoColor()">◑</a>
+    </header>
+
+    <main>
+
+        <section class="mensaje">
+            <h2>CADA VIAJE CON NOSOTROS DEJA HUELLA EN TU MEMORIA,<br>
+                NO EN EL PLANETA</h2>
+        </section>
+
+        <section class="imagenes">
+            <div class="imagen">
+                <img src="../img/web/landing1.jpg" alt="Imagen 1">
+            </div>
+            <div class="imagen">
+                <img src="../img/web/landing2.jpg" alt="Imagen 2">
+            </div>
+            <div class="imagen">
+                <img src="../img/web/landing3.jpg" alt="Imagen 3">
+            </div>
+            <div class="imagen">
+                <img src="../img/web/landing4.jpg" alt="Imagen 4">
+            </div>
+        </section>
+
+        <section class="formulario">
+            <div class="intro-formulario">
+                <h3>¿SABÍAS QUE UN VIAJE DE FIN DE SEMANA CONSUME LO MISMO QUE 3 VIVIENDAS EN UN AÑO EN ELECTRICIDAD?</h3>
+                <ul class="lista-ventajas">
+                    <li>Alojamientos rurales sostenibles</li>
+                    <li>Apoyo a comunidades locales</li>
+                    <li>Autobuses ecológicos</li>
+                    <li>Actividades respetuosas con el medio ambiente</li>
+                    <li>Compensación de huella de carbono</li>
+                </ul>
+                <p>Viajar con nosotros no solo es descubrir nuevos destinos, es cuidar de ellos mientras lo haces</p>
+            </div>
+            <div id="registrarse">
+                <h3>REGÍSTRATE</h3>
+                <form action="#" method="post">
+                    <input type="text" name="nombre" placeholder="Nombre y Apellido" required>
+                    <input type="email" name="email" placeholder="Correo Electrónico" required>
+                    <input type="password" name="contrasenia" placeholder="Contraseña" required>
+                    <input type="password" name="repeat_contrasenia" placeholder="Repetir Contraseña" required>
+                    <input type="text" name="tipo_viaje" placeholder="Tipo de Viaje Favorito">
+                    <label for="notificaciones"><input type="checkbox" name="notificaciones" id="notificaciones">
+                    Deseo recibir notificaciones sobre ofertas y novedades</label>
+                    <label for="politica_privacidad"><input type="checkbox" name="politica_privacidad" id="politica_privacidad" required>
+                    Acepto la política de privacidad</label>
+                    <button type="submit">Suscribirse</button>
+                </form>
+            </div>
+        </section>
+
+        <section class="imagenes">
+            <div class="imagen">
+                <img src="../img/web/landing5.jpg" alt="Imagen 5">
+            </div>
+            <div class="imagen">
+                <img src="../img/web/landing6.jpg" alt="Imagen 6">
+            </div>
+            <div class="imagen">
+                <img src="../img/web/landing7.jpg" alt="Imagen 7">
+            </div>
+            <div class="imagen">
+                <img src="../img/web/landing8.jpg" alt="Imagen 8">
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Raíces Viajeras. All rights reserved.</p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
