Ajustes de estilos y contraste en formulario

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
 
         <section class="formulario">
             <div class="intro-formulario">
-                <h3>¿SABÍAS QUE UN VIAJE DE FIN DE SEMANA CONSUME LO MISMO QUE 3 VIVIENDAS EN UN AÑO EN ELECTRICIDAD?</h3>
+                <h3>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?</h3>
                 <ul class="lista-ventajas">
                     <li>Alojamientos rurales sostenibles</li>
                     <li>Apoyo a comunidades locales</li>
