--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Landing RV</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
     <header>
         <div class="logo-container">
@@ -39,28 +41,45 @@
 
         <section class="formulario">
             <div class="intro-formulario">
-                <h3>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?</h3>
+                <h3>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?
+                </h3>
                 <ul class="lista-ventajas">
                     <li>Alojamientos rurales sostenibles</li>
+                    <li>Uso de energías renovables en alojamientos</li>
                     <li>Apoyo a comunidades locales</li>
+                    <li>Gastronomía con productos locales y de temporada</li>
                     <li>Autobuses ecológicos</li>
                     <li>Actividades respetuosas con el medio ambiente</li>
+                    <li>Colaboración con proyectos de economía circular</li>
+                    <li>Educación ambiental para viajeros</li>
                     <li>Compensación de huella de carbono</li>
                 </ul>
                 <p>Viajar con nosotros no solo es descubrir nuevos destinos, es cuidar de ellos mientras lo haces</p>
             </div>
             <div id="registrarse">
-                <h3>REGÍSTRATE</h3>
+                <h3>REGÍSTRATE Y EMPIEZA </br> TU AVENTURA</h3>
                 <form action="#" method="post">
                     <input type="text" name="nombre" placeholder="Nombre y Apellido" required>
                     <input type="email" name="email" placeholder="Correo Electrónico" required>
                     <input type="password" name="contrasenia" placeholder="Contraseña" required>
                     <input type="password" name="repeat_contrasenia" placeholder="Repetir Contraseña" required>
-                    <input type="text" name="tipo_viaje" placeholder="Tipo de Viaje Favorito">
+                    <label for="tipo_viaje">Tipo de Viaje Favorito</label>
+                    <select name="tipo_viaje" id="tipo_viaje" required>
+                        <option value="" disabled selected>Selecciona tu tipo de viaje</option>
+                        <option value="aventura">Aventura</option>
+                        <option value="cultural">Cultural</option>
+                        <option value="gastronomico">Gastronómico</option>
+                        <option value="playa">Playa</option>
+                        <option value="montana">Montaña</option>
+                        <option value="rural">Rural</option>
+                        <option value="urbano">Urbano</option>
+                    </select>
+
                     <label for="notificaciones"><input type="checkbox" name="notificaciones" id="notificaciones">
-                    Deseo recibir notificaciones sobre ofertas y novedades</label>
-                    <label for="politica_privacidad"><input type="checkbox" name="politica_privacidad" id="politica_privacidad" required>
-                    Acepto la política de privacidad</label>
+                        Deseo recibir notificaciones sobre ofertas y novedades</label>
+                    <label for="politica_privacidad"><input type="checkbox" name="politica_privacidad"
+                            id="politica_privacidad" required>
+                        Acepto la política de privacidad</label>
                     <button type="submit">Suscribirse</button>
                 </form>
             </div>
@@ -88,4 +107,5 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
