--- a/web/index.html
+++ b/web/index.html
@@ -1,66 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Landing RV</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
     <header>
         <div class="logo-container">
             <img src="../img/logos/raices-viajeras-logo0.webp" alt="RV Logo">
             <h1>RAÍCES VIAJERAS</h1>
         </div>
+        <div class="mensaje">
+            <h2>CADA VIAJE CON NOSOTROS DEJA HUELLA EN TU MEMORIA,
+                NO EN EL PLANETA</h2>
+        </div>
         <a onclick="cambiaModoColor()">◑</a>
     </header>
 
     <main>
-
-        <section class="mensaje">
-            <h2>CADA VIAJE CON NOSOTROS DEJA HUELLA EN TU MEMORIA,<br>
-                NO EN EL PLANETA</h2>
-        </section>
-
         <section class="imagenes">
             <div class="imagen">
-                <img src="../img/web/landing1.jpg" alt="Imagen 1">
+                <img src="img/landing1.jpg" alt="Imagen 1">
             </div>
             <div class="imagen">
-                <img src="../img/web/landing2.jpg" alt="Imagen 2">
+                <img src="img/landing2.jpg" alt="Imagen 2">
             </div>
             <div class="imagen">
-                <img src="../img/web/landing3.jpg" alt="Imagen 3">
+                <img src="img/landing3.jpg" alt="Imagen 3">
             </div>
             <div class="imagen">
-                <img src="../img/web/landing4.jpg" alt="Imagen 4">
+                <img src="img/landing4.jpg" alt="Imagen 4">
             </div>
         </section>
 
         <section class="formulario">
             <div class="intro-formulario">
-                <h3>¿SABÍAS QUE UN VIAJE DE FIN DE SEMANA CONSUME LO MISMO QUE 3 VIVIENDAS EN UN AÑO EN ELECTRICIDAD?</h3>
+                <h3>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?
+                </h3>
                 <ul class="lista-ventajas">
                     <li>Alojamientos rurales sostenibles</li>
+                    <li>Uso de energías renovables en alojamientos</li>
                     <li>Apoyo a comunidades locales</li>
+                    <li>Gastronomía con productos locales y de temporada</li>
                     <li>Autobuses ecológicos</li>
                     <li>Actividades respetuosas con el medio ambiente</li>
+                    <li>Colaboración con proyectos de economía circular</li>
+                    <li>Educación ambiental para viajeros</li>
                     <li>Compensación de huella de carbono</li>
                 </ul>
                 <p>Viajar con nosotros no solo es descubrir nuevos destinos, es cuidar de ellos mientras lo haces</p>
             </div>
             <div id="registrarse">
-                <h3>REGÍSTRATE</h3>
-                <form action="#" method="post">
-                    <input type="text" name="nombre" placeholder="Nombre y Apellido" required>
-                    <input type="email" name="email" placeholder="Correo Electrónico" required>
-                    <input type="password" name="contrasenia" placeholder="Contraseña" required>
-                    <input type="password" name="repeat_contrasenia" placeholder="Repetir Contraseña" required>
-                    <input type="text" name="tipo_viaje" placeholder="Tipo de Viaje Favorito">
+                <h3>REGÍSTRATE Y EMPIEZA</br>TU AVENTURA</h3>
+                <form id="form-registro" action="#" method="post">
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellido" required>
+                    <p class="error" id="error-nombre"></p>
+
+                    <input type="email" name="email" id="correo" placeholder="Correo Electrónico" required>
+                    <p class="error" id="error-correo"></p>
+
+                    <input type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña" required>
+                    <p class="error" id="error-contrasenia"></p>
+
+                    <input type="password" name="repeat_contrasenia" id="confirmar_contrasenia" placeholder="Repetir Contraseña" required>
+                    <p class="error" id="error-confirmar_contrasenia"></p>
+
+                    <label for="tipo_viaje">Tipo de Viaje Favorito
+                    <select name="tipo_viaje" id="tipo_viaje" required>
+                        <option value="" disabled selected>Selecciona tu tipo de viaje</option>
+                        <option value="aventura">Aventura</option>
+                        <option value="cultural">Cultural</option>
+                        <option value="gastronomico">Gastronómico</option>
+                        <option value="playa">Playa</option>
+                        <option value="montana">Montaña</option>
+                        <option value="rural">Rural</option>
+                        <option value="urbano">Urbano</option>
+                    </select></label>
+                    <p class="error" id="error-tipo_viaje"></p>
+
                     <label for="notificaciones"><input type="checkbox" name="notificaciones" id="notificaciones">
-                    Deseo recibir notificaciones sobre ofertas y novedades</label>
-                    <label for="politica_privacidad"><input type="checkbox" name="politica_privacidad" id="politica_privacidad" required>
-                    Acepto la política de privacidad</label>
+                        Deseo recibir notificaciones sobre ofertas y novedades</label>
+                    <label for="politica_privacidad"><input type="checkbox" name="politica_privacidad"
+                            id="politica_privacidad" required>
+                        Acepto la política de privacidad</label>
                     <button type="submit">Suscribirse</button>
                 </form>
             </div>
@@ -68,16 +94,16 @@
 
         <section class="imagenes">
             <div class="imagen">
-                <img src="../img/web/landing5.jpg" alt="Imagen 5">
+                <img src="img/landing5.jpg" alt="Imagen 5">
             </div>
             <div class="imagen">
-                <img src="../img/web/landing6.jpg" alt="Imagen 6">
+                <img src="img/landing6.jpg" alt="Imagen 6">
             </div>
             <div class="imagen">
-                <img src="../img/web/landing7.jpg" alt="Imagen 7">
+                <img src="img/landing7.jpg" alt="Imagen 7">
             </div>
             <div class="imagen">
-                <img src="../img/web/landing8.jpg" alt="Imagen 8">
+                <img src="img/landing8.jpg" alt="Imagen 8">
             </div>
         </section>
     </main>
@@ -88,4 +114,5 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
