actualizo en index la carpeta para las imagenes

--- a/web/index.html
+++ b/web/index.html
@@ -36,16 +36,16 @@
         <!--Imágenes Header-->
         <div class="row g-0 ">
             <div class="col-6 col-lg-3 imagen">
-                <img src="../img/web/landing1.jpg" alt="Imagen 1" class=" same-height">
+                <img src="img/landing1.jpg" alt="Imagen 1" class=" same-height">
             </div>
             <div class="col-3 d-none d-lg-block imagen">
-                <img src="../img/web/landing2.jpg" alt="Imagen 2" class="same-height">
+                <img src="img/landing2.jpg" alt="Imagen 2" class="same-height">
             </div>
             <div class="col-3 d-none d-lg-block imagen">
-                <img src="../img/web/landing3.jpg" alt="Imagen 3" class=" same-height">
+                <img src="img/landing3.jpg" alt="Imagen 3" class=" same-height">
             </div>
             <div class="col-6 col-lg-3 imagen">
-                <img src="../img/web/landing4.jpg" alt="Imagen 4" class=" same-height">
+                <img src="img/landing4.jpg" alt="Imagen 4" class=" same-height">
             </div>
         </div>
         <!--IMain -->
@@ -127,16 +127,16 @@
         <!-- Imágenes Footer -->
         <div class="row g-0">
             <div class="imagen col-6 col-lg-3">
-                <img src="../img/web/landing5.jpg" alt="Imagen 5" class=" same-height">
+                <img src="img/landing5.jpg" alt="Imagen 5" class=" same-height">
             </div>
             <div class="imagen col-6 col-lg-3">
-                <img src="../img/web/landing6.jpg" alt="Imagen 6" class=" same-height">
+                <img src="img/landing6.jpg" alt="Imagen 6" class=" same-height">
             </div>
             <div class="imagen col-3 d-none d-lg-block">
-                <img src="../img/web/landing7.jpg" alt="Imagen 7" class=" same-height">
+                <img src="img/landing7.jpg" alt="Imagen 7" class=" same-height">
             </div>
             <div class="imagen col-3 d-none d-lg-block">
-                <img src="../img/web/landing8.jpg" alt="Imagen 8" class=" same-height">
+                <img src="img/landing8.jpg" alt="Imagen 8" class=" same-height">
             </div>
         </div>
     </div>
