Cambios en carpeta documentación web incluyo carpeta con versión antigua landing, cambio de formato de imagenes a webp y camios en index.html de documentación, añado boceto final deskpot en figma

--- a/web/documentacion/Boceto_Final _Landing Page.html
+++ b/web/documentacion/Boceto_Final _Landing Page.html
@@ -6,48 +6,137 @@
     <link rel="stylesheet" href="estiloBoceto.css">
 </head>
 <body>
-<h1>Boceto Final de la Landing Page</h1>
+<h1>Boceto Final de Landing Page para Raíces Viajeras</h1>
 
 <h2>Explicación</h2>
 <p>
-    El boceto definitivo se eligió tras comparar varias propuestas iniciales y
-    seleccionar la que mejor representaba la identidad visual y la claridad en la
-    comunicación. La decisión se tomó considerando la simplicidad del flujo y la
-    coherencia con los objetivos del proyecto.
+    En la primera fase se revisaron los tres bocetos diseñados previamente y se eligió uno de ellos
+    por su claridad en la comunicación y su coherencia con los objetivos del proyecto.<br>
+    Sin embargo, tras una evaluación más profunda, y al visualizar
+    <strong><a href="version-antigua-landing/index.html" target="_blank"> el diseño web ya implementado</a></strong>
+    se consideró que esa versión resultaba<strong> demasiado antigua</strong> en estilo y no transmitía la modernidad
+    que el cliente busca para el lanzamiento de 2026.<br>
+    Por ello, <strong>el equipo decidió crear un nuevo boceto con un enfoque minimalista y más actual,</strong>
+    manteniendo la simplicidad del flujo y reforzando la identidad visual con un diseño limpio,
+    ordenado y centrado en la experiencia del usuario.
 </p>
 
-<h2>Vista Escritorio</h2>
+<h2>Justificación del Boceto Inicial</h2>
+<p>
+    El boceto original fue seleccionado tras comparar las tres propuestas individuales.
+    Se eligió por su capacidad para representar la identidad visual del proyecto, su claridad comunicativa
+    y su estructura basada en principios de diseño como la proporción áurea y la teoría Gestalt.
+    Se valoró especialmente la simplicidad del flujo, la jerarquía visual coherente
+    y el enfoque en la experiencia del usuario.
+</p>
+
+<h2>Vista Escritorio Boceto Antigüo</h2>
 <div class="wireframe">
-    <img src="img/landing-version-digital-desktop-y-fibonacci.jpg" alt="Wireframe vista escritorio">
-</div>
-<div>
-    <p>El layout aprovecha Gestalt y proporción áurea para ordenar
-        la información con claridad y ritmo visual. La proximidad y
-        semejanza agrupan registro, texto y carrusel, mientras continuidad y simetría
-        guían la mirada hacia el CTA sin fricción. Figura–fondo y cierre definen secciones con ligereza,
-        evitando bordes rígidos y manteniendo una estética limpia y armónica.
-        La espiral de Fibonacci refuerza el punto focal en registro y main,
-        equilibrando protagonismo y coherencia tipográfica.
-    </p>
-</div>
-
-
-<h2>Vista Móvil</h2>
-<div class="wireframe-movil">
-    <img src="img/landing-version-digital-movil.jpg" alt="Wireframe vista móvil">
+    <img src="img-bocetos/landing-version-digital-desktop-y-fibonacci.jpg" alt="Wireframe vista escritorio">
 </div>
 <div>
     <p>
-        La composición vertical adapta la proporción áurea y los principios de Gestalt
-        a un espacio compacto, priorizando legibilidad y toque. La espiral de Fibonacci
-        conduce la atención desde el título hasta el formulario de registro, alineada
-        con el patrón de exploración de arriba hacia abajo. Proximidad y semejanza organizan
-        bloques y jerarquía, mientras figura–fondo y cierre delimitan áreas funcionales sin recargar.
-        El formulario, con campos amplios y espaciado generoso, se convierte en el centro visual
-        y mejora la interacción táctil.
-    </p>
+        El diseño mantiene una coherencia visual sólida al aplicar principios de Gestalt y la proporción áurea,
+        creando una estructura equilibrada y fluida.
+        La espiral de Fibonacci guía la atención hacia los elementos clave,
+        como el formulario de registro, generando una navegación natural y jerarquizada.
+        Los patrones de semejanza, proximidad y continuidad organizan los contenidos de forma intuitiva,
+        facilitando la comprensión y mejorando la experiencia del usuario.
+        La proporción áurea se refleja en el tamaño y espaciado del título y los textos,
+        aportando armonía visual y reforzando la usabilidad, ya que el recorrido de lectura
+        se produce de manera cómoda y coherente.
 
+    </p>
 </div>
+
+<h2>Vista Móvil  Boceto Antigüo</h2>
+<div class="wireframe-movil">
+    <img src="img-bocetos/landing-version-digital-movil.jpg" alt="Wireframe vista móvil">
+</div>
+<div>
+    <p>
+        El uso de la proporción áurea y los principios de Gestalt se adapta a un formato vertical
+        que prioriza la claridad y la legibilidad.
+        La espiral de Fibonacci guía la mirada desde el título hasta el formulario de registro,
+        asegurando un flujo visual natural.
+        La proximidad y continuidad estructuran la información en bloques bien definidos,
+        facilitando la lectura y la interacción táctil.
+        Estos recursos proporcionan equilibrio y armonía, logrando una interfaz coherente y estética
+        que favorece la usabilidad y la navegación intuitiva en pantallas reducidas.
+
+    </p>
+</div>
+
+<h2>Justificación de Actualización del Boceto</h2>
+<p>
+    <strong>Aunque el boceto inicial cumplía con los requisitos fundamentales del cliente,
+    el equipo decidió actualizarlo tras detectar que su estilo visual resultaba demasiado clásico
+    y no reflejaba adecuadamente la modernidad que se busca para el lanzamiento de 2026.</strong>
+    Por ello, se desarrolló un nuevo boceto con un<strong> enfoque minimalista, más actual y profesional,</strong>
+    manteniendo los principios de claridad, estructura ordenada y experiencia de usuario efectiva.
+</p>
+<p>
+    Esta nueva versión conserva la lógica de bloques del diseño anterior,
+    pero simplifica los elementos visuales, refuerza el protagonismo del CTA y mejora la adaptabilidad responsive.
+    Se ha optimizado el uso del espacio, la tipografía y los contrastes para lograr una estética más limpia
+    y contemporánea, alineada con las expectativas del público objetivo.
+</p>
+<h2>Nuevo Boceto Elegido</h2>
+<p>
+    El nuevo boceto fue creado como respuesta a la necesidad de actualizar la estética del diseño original,
+    que resultaba visualmente desfasado para los estándares actuales.
+    <strong>Esta nueva versión mantiene los principios fundamentales del proyecto:</strong>
+    "claridad, estructura ordenada y eficacia comunicativa"
+    <strong>  pero los reinterpreta con un enfoque más moderno y minimalista.</strong>
+</p>
+<p>
+    El diseño se apoya en los principios de la teoría Gestalt para organizar los bloques
+    de contenido de forma intuitiva: la proximidad y la semejanza agrupan elementos relacionados,
+    mientras que la continuidad y la simetría guían la navegación del usuario de manera fluida.
+</p>
+
+<p>
+    Además, el diseño se ha renovado por completo para lograr un aspecto más moderno.
+    El resultado es una landing page más limpia, profesional y acorde con lo que esperan los usuarios actuales,
+    especialmente de cara al lanzamiento de una aplicación web en 2026.
+</p>
+
+<h2>Vista Deskpot Boceto Nueva Landing</h2>
+<div class="wireframe">
+    <img src="img-bocetos/Boceto_Final%20_Deskpot_Landing-Page-RV.jpg" alt="Wireframe vista móvil">
+</div>
+<p>
+    La espiral marca el recorrido visual de la página.
+    Guía la mirada desde el menú superior, pasando por los bloques de contenido,
+    hasta llegar al punto más importante: el formulario de registro, que coincide con el centro de la espiral
+    para dirigir al usuario hacia la conversión.
+    Esto hace que la composición sea armónica y fácil de seguir.
+</p>
+<p>
+    En la composición se aplican varios principios de la Gestalt:<br>
+    - <strong> Proximidad:</strong>  Los elementos relacionados están agrupados (menú, textos, imágenes, formulario).<br>
+    - <strong> Similaridad:</strong>  Las cajas y textos usan formas y estilos parecidos, lo que da unidad.<br>
+    - <strong> Continuidad:</strong>  El recorrido visual sigue la espiral de manera natural.<br>
+    - <strong> Figura–fondo:</strong>  El formulario destaca claramente sobre el resto.<br>
+</p>
+<h2>Vista Móvil Boceto Nueva Landing</h2>
+<div class="wireframe-movil">
+    <img src="img-bocetos/Boceto_Final%20_Deskpot_Landing-Page-RV.jpg" alt="Wireframe vista móvil">
+</div>
+<p>
+    La espiral marca el recorrido visual de la página.
+    Guía la mirada desde el menú superior, pasando por los bloques de contenido,
+    hasta llegar al punto más importante: el formulario de registro, que coincide con el centro de la espiral
+    para dirigir al usuario hacia la conversión.
+    Esto hace que la composición sea armónica y fácil de seguir.
+</p>
+<p>
+    En la composición se aplican varios principios de la Gestalt:
+    - Proximidad: Los elementos relacionados están agrupados (menú, textos, imágenes, formulario).
+    - Similaridad: Las cajas y textos usan formas y estilos parecidos, lo que da unidad.
+    - Continuidad: El recorrido visual sigue la espiral de manera natural.
+    - Figura–fondo: El formulario destaca claramente sobre el resto.
+</p>
 
 </body>
 </html>
