cambios en texto

--- a/web/documentacion/Boceto_Final _Landing Page.html
+++ b/web/documentacion/Boceto_Final _Landing Page.html
@@ -30,7 +30,7 @@
     y el enfoque en la experiencia del usuario.
 </p>
 
-<h2>Vista Escritorio Boceto Antigüo</h2>
+<h2>Vista Escritorio Boceto Antiguo</h2>
 <div class="wireframe">
     <img src="img-bocetos/landing-version-digital-desktop-y-fibonacci.jpg" alt="Wireframe vista escritorio">
 </div>
@@ -49,7 +49,7 @@
     </p>
 </div>
 
-<h2>Vista Móvil  Boceto Antigüo</h2>
+<h2>Vista Móvil  Boceto Antiguo</h2>
 <div class="wireframe-movil">
     <img src="img-bocetos/landing-version-digital-movil.jpg" alt="Wireframe vista móvil">
 </div>
