cambio formato de imágenes a webp

--- a/web/documentacion/Boceto_Final _Landing Page.html
+++ b/web/documentacion/Boceto_Final _Landing Page.html
@@ -116,7 +116,7 @@
     En la composición se aplican varios principios de la Gestalt:<br>
     - <strong> Proximidad:</strong>  Los elementos relacionados están agrupados (menú, textos, imágenes, formulario).<br>
     - <strong> Similaridad:</strong>  Las cajas y textos usan formas y estilos parecidos, lo que da unidad.<br>
-    - <strong> Continuidad:</strong>  El recorrido visual sigue la espiral de manera natural.<br>
+    - git<strong> Continuidad:</strong>  El recorrido visual sigue la espiral de manera natural.<br>
     - <strong> Figura–fondo:</strong>  El formulario destaca claramente sobre el resto.<br>
 </p>
 <h2>Vista Móvil Boceto Nueva Landing</h2>
