estilo de iconos en modo oscuro en versión móvil y menú hamburguesa

--- a/web/documentacion/version-antigua-landing/index.html
+++ b/web/documentacion/version-antigua-landing/index.html
@@ -15,7 +15,7 @@
             <!-- Logo + título -->
             <div
                 class="col-12 col-lg-4 d-flex align-items-center justify-content-center justify-content-lg-start order-1">
-                <img src="../img/logos/raices-viajeras-logo0.webp" alt="RV Logo" class="img-fluid me-2"
+                <img src="img/raices-viajeras-logo0.webp" alt="RV Logo" class="img-fluid me-2"
                     style="max-width:80px;">
                 <h1 class="mb-0">RAÍCES VIAJERAS</h1>
                 <!-- Botón modo en móviles: junto al logo -->
