--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
                 <span>RAÍCES VIAJERAS</span>
             </a>
             <div class="d-flex align-items-center gap-2">
-                <button class="btn btn-link d-lg-none btn-modo" onclick="cambiaModoColor()">◑</button>
+                <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()">◑</button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
